# SensorArray

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/ads126xAdc/: CMakeLists.txt  Kconfig  README.md  ads126xAdc.c
components/ads126xAdc/include/: ads126xAdc.h
components/bleTransport/: bleTransport.c
components/boardSupport/: boardSupport.c
components/fdc2212Cap/: Kconfig  fdc2212Cap.c
components/fdc2212Cap/include/: fdc2212Cap.h
components/fdc2214Cap/: CMakeLists.txt  Kconfig  README.md  fdc2214Cap.c
components/fdc2214Cap/include/: fdc2214Cap.h
components/matrixEngine/: CMakeLists.txt
components/matrixEngine/include/: matrixEngine.h
components/powerCtrl/: Kconfig
components/powerCtrl/include/: powerCtrl.h
components/protocolWire/: CMakeLists.txt  Kconfig
components/tmuxSwitch/: CMakeLists.txt  Kconfig  README.md  tmuxSwitch.c
components/tmuxSwitch/include/: tmuxSwitch.h
components/transportWire/: Kconfig
components/transportWire/include/: transportWire.h
core/boardSupport/: Kconfig  README.md  boardSupport.c
core/boardSupport/include/: boardSupport.h
core/matrixEngine/: CMakeLists.txt  Kconfig  README.md  matrixEngine.c
core/matrixEngine/include/: matrixEngine.h
core/powerCtrl/: README.md  powerCtrl.c
main/: CMakeLists.txt  DEBUG_ROUTING.md  Kconfig.projbuild  README.md  main.c  sensorarrayApp.c  sensorarrayApp.h  sensorarrayBoardMap.c  sensorarrayBoardMap.h  sensorarrayBringup.c  sensorarrayBringup.h  sensorarrayConfig.h  sensorarrayDebug.c  sensorarrayDebug.h  sensorarrayDebugCap.c  sensorarrayDebugCap.h  sensorarrayDebugFdcI2cDiscovery.c  sensorarrayDebugFdcI2cDiscovery.h  sensorarrayDebugFdcSelbS5d5.c  sensorarrayDebugFdcSelbS5d5.h  sensorarrayDebugS1d1.c  sensorarrayDebugS1d1.h  sensorarrayDebugSelftest.c  sensorarrayDebugSelftest.h  sensorarrayLog.c  sensorarrayLog.h  sensorarrayMeasure.c  sensorarrayMeasure.h  sensorarrayPerf.c  sensorarrayPerf.h  sensorarrayRateControl.c  sensorarrayRateControl.h  sensorarrayRecovery.c  sensorarrayRecovery.h  sensorarrayStatus.c  sensorarrayStatus.h  sensorarrayTypes.h  sensorarrayVoltageScan.c  sensorarrayVoltageScan.h  sensorarrayVoltageStream.c  (+1 more)
transport/bleTransport/: Kconfig  README.md
transport/bleTransport/include/: bleTransport.h
transport/protocolUsb/: CMakeLists.txt  README.md  protocolUsb.c
transport/protocolUsb/include/: protocolUsb.h
transport/protocolWire/: README.md  protocolWire.c
transport/protocolWire/include/: protocolWire.h
transport/transportWire/: CMakeLists.txt  README.md  transportWire.c
