idf_component_register(
    SRCS
        "main.c"
        "sensorarrayApp.c"
        "sensorarrayBoardMap.c"
        "sensorarrayBringup.c"
        "sensorarrayMeasure.c"
        "sensorarrayVoltageScan.c"
        "sensorarrayLog.c"
        "sensorarrayDebug.c"
        "sensorarrayDebugFdcI2cDiscovery.c"
        "sensorarrayDebugFdcSelbS5d5.c"
        "sensorarrayDebugSelftest.c"
        "sensorarrayDebugS1d1.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        boardSupport
        esp_timer
        powerCtrl
        tmuxSwitch
        ads126xAdc
        fdc2214Cap
        protocolWire
        protocolUsb
        transportWire
        bleTransport
        matrixEngine
)
